# cpp-git

./: .gitignore  .gitmodules  CMakeLists.txt  Design_Rationale.md  README.md  Walkthrough.md  setup_script.sh
lib/ranges/: CMakeLists.txt
lib/sha1/: CMakeLists.txt  sha1.cpp  sha1.hpp
src/: CMakeLists.txt  main.cpp  main.hpp
src/lib/: CMakeLists.txt  commands.cpp  commands.hpp  git_objects.cpp  git_objects.hpp  helper.cpp  helper.hpp
test/: CMakeLists.txt  main.cpp  test.cpp
